1998-05-09  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: Remove simple-minded check for `gtk+'.

Fri Apr 24 16:43:38 1998  Owen Taylor  <otaylor@gtk.org>

	* autogen.sh: Pass the results of the environment variable
	ACLOCAL_FLAGS to aclocal. This allows, for instance,

	 ACLOCAL_FLAGS="-I /home/owen/share/aclocal/" autogen.sh
	
Sun Apr 19 01:35:53 EDT 1998 Gregory McLean <gregm@comstar.net>

        * gnome-x-checks.m4: Updated the gtk check to check for 1.0.0.

1998-04-08  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: Update to list newer versions of packages.
	* gnome-support.m4: Add `scandir' to AC_REPLACE_FUNCS.
	Also run AC_HEADER_DIRENT.

1998-03-31  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (AC_REPLACE_FUNCS): Look for vasprintf.

Thu Mar 19 23:23:30 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome.m4: An empty true branch of an `if' statement is not valid
	sh syntax.  If GNOME_INIT_HOOK argument $1 is empty, use ":"
	instead.

1998-03-19  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome.m4 (GNOME_INIT_HOOK): Provide a way to hook some code to
	execute;  Accept a probe mode.
	
	(GNOME_INIT): Define in terms of GNOME_INIT_HOOK.

Thu Mar 19 00:17:46 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Cache results of check for
	program_invocation_short_name, program_invocation_name.  Check to
	make sure argp functions are in a library.

	* gnome-support.m4: Cache results of argp check.

Sun Mar 15 15:54:43 1998  Owen Taylor  <owt1@cornell.edu>

	* gnome-x-checks.m4: Replaced checks for X and GTK
	with AM_PATH_GTK. x_include, X_LIBS, etc, variables no longer
	defined.

1998-03-12  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Add a check for <linewrap.h> -- this enables
	some optimizations when compiling `argp'.

Mon Mar  9 19:32:42 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Build vsnprintf.o, not vsnprint.o.

1998-03-09  Raja R Harinath  <harinath@cs.umn.edu>
